<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Boardwalk</string>
    <string name="login_username_hint">Username or Mojang account e-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_is_demo_account">This account doesn\'t seems to have a Minecraft user linked to it. Did you buy Minecraft? You can play the Demo version with the "Play Demo" button below.</string>
    <string name="login_logging_in">Logging in&#8230;</string>
    <string name="login_error">Unable to login:</string>
    <string name="login_button">Login</string>
    <string name="login_extra_info_text">This version of Boardwalk is very experimental - world generation may take up to 5 minutes, multiplayer only works on offline servers, and putting this application in the background causes Minecraft to crash.\n
These issues are being investigated and may be fixed in a later version.
</string>
    <string name="login_import_credentials">Import credentials from launcher_profiles.json</string>
    <string name="login_import_credentials_info">You can import your login credentials from the official PC Minecraft launcher instead of entering your username and password here.\nTo do this, login to Minecraft on your computer, then copy .minecraft/launcher_profiles.json from your computer to your device. Finally, click OK to select and import the launcher_profiles.json.\n
Note that the import process will log you out on the desktop launcher.</string>
    <string name="login_import_resource_pack">Import resource pack</string>

    <string name="recommendation_art">Your device supports the Android Runtime (ART), which may be able to run Minecraft faster. You can switch to ART by going to Settings, then Developer Settings, then Select Runtime, and finally select Use ART.\n(Other applications may not be ART compatible, so you might want to switch back to Dalvik when not using Boardwalk.)</string>
    <string name="recommendation_memory">Unfortunately, your device is not supported, as this application requires 1GB of memory to convert Minecraft for Android. The application may force close if you try to launch.</string>
    <string name="recommendation_dual_core">Unfortunately, your device is not supported, as this application requires a dual-core CPU or better. Otherwise, the application will run very slowly.</string>

    <string name="play_offline">Play Offline</string>
    <string name="play_demo">Play Demo</string>
    <string name="play_regular">Launch Minecraft</string>
    <string name="convert_populating_working_directory">Populating working directory</string>
    <string name="convert_downloading">Downloading</string>
    <string name="convert_converting">Converting</string>
    <string name="convert_preparing_to_launch_minecraft">Preparing to launch Minecraft</string>

    <string name="export_log">Export log</string>

    <string name="control_keyboard">Keyboard</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="controls">Controls</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">Sft</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_jump">■</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_thirdperson">3rd</string>



    <string name="about_app">About</string>
    <string name="about_librarycredits">This application is made possible by the work of many open-source contributors. Some of the libraries used are glShim, LWJGL, Gson, dx, and jarjar. The full list and applicable licenses can be found at http://git.io/2cWyVg\n
A special thanks to ptitSeb and lunixbochs for writing glShim, which made this application possible.\n
This application is not affiliated with Mojang AB. Minecraft ®/TM © 2009-2013 Mojang / Notch.
    </string>
    <string name="about_copyright">Copyright (c) 2014 Zhuowei Zhang</string>
</resources>
