<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <EditText android:id="@+id/launcher_username_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/login_username_hint"
        android:inputType="textEmailAddress"/>
    <EditText android:id="@+id/launcher_password_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"/>
    <Button android:id="@+id/launcher_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"/>
    <Button android:id="@+id/launcher_play_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_demo"/>
    <TextView android:id="@+id/launcher_recommendation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ProgressBar android:id="@+id/launcher_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView android:id="@+id/launcher_progress_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
</ScrollView>

