<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/about_appnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="15pt"/>

    <TextView
        android:id="@+id/about_appversiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11pt"/>

    <TextView
        android:id="@+id/about_librarycreditstext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_librarycredits"/>

    <TextView
        android:id="@+id/about_contributorcreditstext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Thanks to jose-vm, sjwoo1210, bmx22c, MCMrARM, and others for their contributions to Boardwalk."/>

    <TextView
        android:id="@+id/about_copyrighttext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_copyright"/>

</LinearLayout>
</ScrollView>
